syntax = "proto3";

option csharp_namespace = "Task42.Grpc";

package orders;

import "google/protobuf/timestamp.proto";


service OrdersService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);


  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc AddItemToOrder(AddItemRequest) returns (OrderItemResponse);
  rpc RemoveItemFromOrder(RemoveItemRequest) returns (RemoveItemResponse);
  rpc MoveOrderToProcessing(MoveToProcessingRequest) returns (EmptyResponse);
  rpc CancelOrder(CancelOrderRequest) returns (EmptyResponse);
  rpc GetOrderHistory(GetOrderHistoryRequest) returns (OrderHistoryResponse);
}


message EmptyResponse {
}


// ----------------------------------------------//

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message ProductResponse {
  int64 product_id = 1;
  string name = 2;
  double price = 3;
}
// ----------------------------------------------//

message CreateOrderRequest {
  string created_by = 1;
}

message OrderResponse {
  int64 order_id = 1;
  OrderState state = 2;
  google.protobuf.Timestamp created_at = 3;
  string created_by = 4;
}

enum OrderState {
  UNSPECIFIED = 0;
  CREATED = 1;
  PROCESSING = 2;
  COMPLETED = 3;
  CANCELLED = 4;
}

// ----------------------------------------------//

message AddItemRequest {
  int64 order_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message OrderItemResponse {
  int64 order_item_id = 1;
  int64 order_id = 2;
  int64 product_id = 3;
  int32 quantity = 4;
  bool deleted = 5;
}

// ----------------------------------------------//

message RemoveItemRequest {
  int64 order_id = 1;
  int64 order_item_id = 2;
}

message RemoveItemResponse {
}

// ----------------------------------------------//

message MoveToProcessingRequest {
  int64 order_id = 1;
}

// ----------------------------------------------//

message CancelOrderRequest {
  int64 order_id = 1;
}

// ----------------------------------------------//
message GetOrderHistoryRequest {
  int64 order_id = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message OrderHistoryResponse {
  repeated OrderHistoryItem items = 1;
}

message OrderHistoryItem {
  int64 history_item_id = 1;
  int64 order_id = 2;
  google.protobuf.Timestamp created_at = 3;
  OrderHistoryKind kind = 4;
  OrderHistoryPayload payload = 5;
}

enum OrderHistoryKind {
  HISTORY_UNSPECIFIED = 0;
  HISTORY_CREATED = 1;
  HISTORY_ITEM_ADDED = 2;
  HISTORY_ITEM_REMOVED = 3;
  HISTORY_STATE_CHANGED = 4;
}


message OrderHistoryPayload {
  oneof payload {
    OrderCreatedPayload created = 1;
    OrderItemAddedPayload item_added = 2;
    OrderItemRemovedPayload item_removed = 3;
    OrderStateChangedPayload state_changed = 4;
  }
}

message OrderCreatedPayload {
  string created_by = 1;
}

message OrderItemAddedPayload {
  int64 product_id = 1;
  int32 quantity = 2;
}

message OrderItemRemovedPayload {
  int64 product_id = 1;
}

message OrderStateChangedPayload {
  string from_state = 1;
  string to_state = 2;
}


// ----------------------------------------------//
